# elykseer-cpp

./: .drone.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  shell.nix
.gitea/workflows/: CI-nix.yaml
.github/workflows/: CI.yaml  CI.yml  semgrep.yml
build.old/: .gitignore  CMakeLists.txt
build.old/src/: .gitignore  CMakeLists.txt
build.old/src/cli/: CMakeLists.txt
build.old/test/: CMakeLists.txt
ci/: Jenkinsfile.FreeBSD  Jenkinsfile.Linux  Jenkinsfile.Linux-nix  Jenkinsfile.OSX  Jenkinsfile.OSX-nix
cpp/: README  mk_cpp.sh
cpp/src/: CMakeLists.txt
cpp/tests/: CMakeLists.txt
ext/: Makefile  README  README.md  pugixml.patch1  pugixml.patch2  rapidcheck-cstdint.patch  x_Darwin_to_Windows.sh
src/: copyright.md
src/cpp/: CMakeLists.txt  appid.cpp  appid.hpp.md  appid.ixx  appid_functions.cpp.md  assembly.hpp.md  assembly_-alpha-.md  assembly_ctor.cpp.md  assembly_functions.cpp.md  backupctrl.hpp.md  backupctrl_-alpha-.md  backupctrl_ctor.cpp.md  backupctrl_functions.cpp.md  backupctrl_info.cpp.md  chunk.hpp.md  chunk_-alpha-.md  chunk_ctor.cpp.md  chunk_functions.cpp.md  coqassembly.cpp  coqassembly.hpp.md  coqassembly.ixx  coqassembly_-alpha-.md  coqassembly_ctor.cpp.md  coqassembly_functions.cpp.md  coqassemblycache.cpp  coqassemblycache.hpp.md  coqassemblycache.ixx  coqassemblycache_-alpha-.md  coqassemblycache_ctor.cpp.md  coqassemblycache_functions.cpp.md  coqbuffer.cpp  coqbuffer.hpp.md  coqbuffer.ixx  coqbuffer_-alpha-.md  coqbuffer_ctor.cpp.md  coqbuffer_functions.cpp.md  coqconfiguration.hpp.md  coqconfiguration.ixx  coqenvironment.cpp  coqenvironment.hpp.md  (+81 more)
src/cpp/cli/: CMakeLists.txt  lxrbackup.cpp  lxrbackup.cpp.md  lxrbackup.hpp.md  lxrrestore.cpp  lxrrestore.cpp.md  lxrrestore.hpp.md  lxrrestore.md  lxrverify.cpp  lxrverify.cpp.md
support/: Toolchain_Darwin_to_Windows.cmake  make_darwin.sh  make_win64.sh
tests/cpp/: CMakeLists.txt  elykseer-cpp-ut.md  utAssembly.cpp.md  utBackupCtrl.cpp.md  utCoqAssembly.cpp  utCoqAssembly.cpp.md  utCoqAssemblyCache.cpp  utCoqAssemblyCache.cpp.md  utCoqEnvironment.cpp  utCoqEnvironment.cpp.md  utDbBackupJob.cpp.md  utDbFp.cpp.md  utDbKey.cpp.md  utFileCtrl.cpp  utFsUtils.cpp  utFsUtils.cpp.md  utLiz.cpp  utMain.cpp  utOS.cpp  utOS.cpp.md  utOptions.cpp.md  utRestoreCtrl.cpp.md  utSha256.cpp.md
